# dxc-hlsl-2-spirv-test

./: .gitignore  0 - Edit And Update dxc portFile.bat  CMakeLists.txt  LICENSE  README.md  main.cpp  makeClean.bat  vcpkg-configuration.json  vcpkg.json
data/: UTF-8-Test1.txt
data/shaders/: testCompilatonError.hlsl  testCompilatonSuccess.hlsl  testUTF8.hlsl
